--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,26 @@
 body{
-    background-image: url(/img/flock-of-birds-917494.jpg);
+    background-image: url(../img/flock-of-birds-917494.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
-
+body img{
+    border-radius: 50%;
+    height: 250px;
+    width: 250px;
+}
 .content{
-    background: white;
+    background: rgb(255, 255, 255);
     width: 50%;
     padding: 40px;
+    border-radius: 10px;
     margin: 100px auto;
     font-family: Arial, Helvetica, sans-serif;
 }
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
 p{
-    font-size: 25px;
+    font-size: 18px;
     color: black;
 }
