--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,7 @@ body{
     font-family: 'Raleway', sans-serif;
 }
 #container{
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 20px 20px;
 }
 .content{
     display: block;
