--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,68 @@
 body{
-    background-image: url(../img/flock-of-birds-917494.jpg);
+    background-image: url(../img/Imagen1.png);
     background-size: cover;
     background-attachment: fixed;
 }
+
+h4{
+    box-shadow: 0px 3px #7c5f9b;
+    
+}
+
+h2{
+    box-shadow: 0px 4px  #7c5f9b
+}
+.container-img {
+    position: relative;
+    width: 50%;
+  }
+  
+  .image {
+    display: block;
+    width: 300px;
+    height: auto;
+    border-radius: 50%;
+    
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 300px;
+    opacity: 0;
+    border-radius: 50%;
+    transition: .5s ease;
+    background-image: url(../img/tenor.gif);
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+    box-shadow: 0px 5px 5px 0px #888888;
+  }
+  
+  .container-img:hover .overlay {
+    opacity: 1;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
 .content{
     background-color: white;
-    margin: 10px;
-    padding: 10px 0px;
+    margin: 50px 30px;
+    padding: 30px 25px;
     border-radius: 10px;
 }
 .top-header{
@@ -15,6 +71,7 @@ body{
     justify-content: center;
     text-align: center;
 }
+
 #name h1{
     background-color: black;
     padding: 5px;
@@ -26,18 +83,17 @@ body{
     font-weight: bold;
     margin-top: 5px
 }
-.col-lg-6 img{
+/* .col-lg-6 img{
     border-radius: 50%;
-        width: 300px;
-        height: auto;
-    box-shadow: 5px 10px #3cb3;
-}
-
+    width: 300px;
+    height: auto;
+    box-shadow: 5px 10px #d9b3ff;
+} */
 .contact-info{
     display: flex;
     flex-direction: column;
     padding: 5px;
-    margin-top: 10px; 
+    margin-top: 30px; 
 }
 .col-lg-6{
     display: flex;
@@ -50,28 +106,67 @@ body{
     font-size: 20px;
     color: black;
     margin: 10px;
-    font-weight: bold;
 }
 
 .boxes-info{
-    padding: 10px 0px;
+    padding: 2px;
     text-align: center;
     margin: 5px 5px;
+    background: #f2e6ff;
+    border-radius: 10px;
 }
+
+.boxes-info:hover{
+    box-shadow: 3px 4px #888888;
+    -webkit-transform: translateX(-3px);
+    transform: translateX(-3px);
+}
+
+.boxes-info-2{
+    margin:10px;
+    padding: 5px;
+}
+.boxes-info-2 li{
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
+    margin: 5px;
+}
+.zoom-li:hover{
+    transition: transform .2s;
+    transform: scale(1.3);
+    color:  #7c5f9b;
+}
+
+.description{
+    font-size: 12px;
+    text-decoration: none;
+}
+
+
+.zoom-language:hover{
+    transition: transform .2s;
+    transform: scale(1.3);
+    color:  #7c5f9b;
+    background-color: white;
+    padding: 5px;
+}
+
 .boxes-info h2{
-    background-color: #88e1f2;
-    color: white;
-    padding: 10px;
+    background-color: white;
+    /* color: black; */
+    margin: 10px;
     box-shadow: 3px 4px #888888;
     font-family: 'Nunito Sans', sans-serif;
     font-weight: bold
 }
+
+/* 
 .boxes-info h2:hover{
-    box-shadow:
-                3px 4px #888888;
+    box-shadow: 3px 4px #888888;
         -webkit-transform: translateX(-3px);
         transform: translateX(-3px);
-}
+} */
+
 .about-me-container{
     padding: 10px;
 }
@@ -82,10 +177,62 @@ body{
     font-size: 18px;
 }
 .contact-info a:hover{
-    color: darkturquoise;
+    color: #a366ff;
     text-decoration: none;
 }
 
+.sw-skills{
+    padding-top: 10px;
+
+}
+.sw-icon img{
+    width: 50px;
+}
+
+.sw-icon{
+    padding: 10px;
+   /* background-color: black; */
+    border-radius: 5px;
+}
+.icon-txt{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: bold;
+    color: grey;
+}
+.icon-container{
+    display: flex;
+    justify-content: center;
+}
+
+.zoom:hover{
+    transition: transform .2s;
+    transform: scale(1.3);
+    background-color: white;
+}
+
+.zoom-s:hover{
+    transition: transform .2s;
+    transform: scale(1.3);
+    font-size: 12px;
+    background-color: white;
+}
+.full-s{
+    color: #d9b3ff;
+}
+.sw-line{
+    margin-top: 20px
+}
+
+.wk-exp{
+    margin-top: 20px
+}
+
+.content-data{
+    margin-top: 20px;
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
@@ -93,6 +240,33 @@ body{
         margin:5px 25%;
     }
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .content{
+    margin:2px;
+    }
+    
+    .col-lg-6 img{
+    border-radius: 100%;
+    width: 250px;
+    height: auto;
+    box-shadow: 5px 10px #d9b3ff;
+    }
+    .contact-info a{
+        font-size: 100%;
+    }
+
+   
+}
+
+
+    
+
+
+
+
+
 
 
 
